k8s/prisma.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prisma
  namespace: api
spec:
  selector:
    matchLabels:
      app: prisma
  template:
    metadata:
      labels:
        app: prisma
    spec:
      # restartPolicy: Always
      containers:
      - name: prisma
        image: prismagraphql/prisma:1.34
        ports:
        - containerPort: 4466
---
apiVersion: v1
kind: Service
metadata:
  name: prisma
  namespace: api
spec:
  selector:
    app: prisma
  ports:
  - port: 4466
    targetPort: 4466
